# hello_world

./: README.md  TODO  pyproject.toml
hello_world/: __main__.py
hello_world/string_printer/: exceptions.py  protocol.py  standard_string_printer.py
hello_world/string_printer/backend/: protocol.py  stdout.py
