[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = ""
authors = ["nsdkin <d.nsdkin@gmail.com>"]
readme = "README.md"
packages = [{include = "hello_world"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
